samples/_failures_safe/1761610558_086baf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8eacef3a.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_8eacef3a.c:159:18: error: ‘TOKEN_N’ undeclared (first use in this function); did you mean ‘TOKEN_EOF’?
  159 |             case TOKEN_N
      |                  ^~~~~~~
      |                  TOKEN_EOF
./samples/SAFE/__tmp_8eacef3a.c:159:18: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_8eacef3a.c:159:13: error: expected ‘:’ or ‘...’ at end of input
  159 |             case TOKEN_N
      |             ^~~~
./samples/SAFE/__tmp_8eacef3a.c:159:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8eacef3a.c:159:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8eacef3a.c:159:13: error: expected declaration or statement at end of input
